# MW-Charging-Aux-Board

./: .gitignore  L1ang-test.txt
GD/: app_protocol.h  bm543.uvguix.bcq  bm543.uvoptx  bm543.uvprojx  bsp_can.c  main.c  motor_comms_task.c
GD/GD32F4xx_Firmware_Library_V3.3.2/GD32F4xx_Firmware_Library_V3.3.2/: SHA256.txt
GD32F407VET6/APP/: motor_task.c  motor_task.h
GD32F407VET6/BSP/: bsp_can.c  bsp_can.h  bsp_debug_usart.c  bsp_debug_usart.h  bsp_dm542.c  bsp_dm542.h
GD32F407VET6/Template/: FreeRTOSConfig.h  app_protocol.h  gd32f4xx_it.c  main.c  main.h
GD32F407VET6/Template/Keil5_project/: Project.uvguix.bcq  Project.uvguix.白楚琦  Project.uvoptx  Project.uvprojx
Software/BootLoader_MW-Charging-Aux-Board/: .mxproject  BootLoader.ioc
Software/BootLoader_MW-Charging-Aux-Board/Inc/: bsp_spi_flash_hal.h  iap_update.h  main.h  stm32f4xx_hal_conf.h
Software/BootLoader_MW-Charging-Aux-Board/MDK-ARM/: BootLoader.uvguix.Admin  BootLoader.uvoptx  BootLoader.uvprojx  startup_stm32f407xx.lst
Software/BootLoader_MW-Charging-Aux-Board/Src/: bsp_spi_flash_hal.c  gpio.c  iap.c  main.c  spi.c  usart.c
Software/QT/PowerOptimize/: CMakeLists.txt  PowerOptimizer.pro  command_builder.cpp  command_builder.h  command_struct.h  logindialog.cpp  logindialog.h  mainwindow.cpp  mainwindow.h
Software/QT/PowerOptimizer/: PowerOptimizer.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
Software/QT_KEHU/qt_kehu_develop/: CommandAdapter.cpp  CommandAdapter.h  main.cpp  (+4 more)
Software/RK3568_MW-Charging-Aux-Board/QT-control-center/PowerOptimizer/: CMakeLists.txt  Makefile  PowerOptimizer.pro  mainwindow.ui
Software/RK3568_MW-Charging-Aux-Board/QT-control-center/PowerOptimizer/config/: admins.json  config.json
Software/RK3568_MW-Charging-Aux-Board/QT-control-center/PowerOptimizer/csv_data/: 20260116_1655_Fri_optimal_result.csv  20260116_1659_Fri_channel_info.csv  20260116_1659_Fri_optimal_result.csv
Software/RK3568_MW-Charging-Aux-Board/QT-control-center/PowerOptimizer/include/: command_struct.h  logindialog.h  mainwindow.h  tab_netural.h  tab_turntablecontrol.h  turntable_controller.h
Software/RK3568_MW-Charging-Aux-Board/QT-control-center/PowerOptimizer/src/: logindialog.cpp  main.cpp  mainwindow.cpp  tab_deviceconnect.cpp  tab_stm32.cpp  tab_turntablecontrol.cpp
Software/RK3568_MW-Charging-Aux-Board/aerial-visioner/: CMakeLists.txt  README.md
Software/RK3568_MW-Charging-Aux-Board/aerial-visioner/include/: antenna-visioner.h  postprocess.h
Software/RK3568_MW-Charging-Aux-Board/aerial-visioner/model/yolov8/: antenna.rknn
Software/RK3568_MW-Charging-Aux-Board/aerial-visioner/src/: antenna-visioner.cpp  postprocess.cc  test_demo.cpp  yolov8.cc  yolov8_zero_copy.cc
Software/RK3568_MW-Charging-Aux-Board/aerial_visioner/: CMakeLists.txt  build.sh
Software/RK3568_MW-Charging-Aux-Board/aerial_visioner/include/: antenna-visioner.h
Software/RK3568_MW-Charging-Aux-Board/aerial_visioner/include/yolov5/: postprocess.h
Software/RK3568_MW-Charging-Aux-Board/aerial_visioner/src/: antenna-visioner.cpp  postprocess.cpp  test_demo.cpp
Software/RK3568_MW-Charging-Aux-Board/aerial_visioner/src/yolov8/: postprocess.cc
Software/RK3568_MW-Charging-Aux-Board/backups/: CMakeLists.txt
Software/RK3568_MW-Charging-Aux-Board/mpp-converter/: CMakeLists.txt  README.md
Software/RK3568_MW-Charging-Aux-Board/mpp-converter/include/: mpp-converter.h
Software/RK3568_MW-Charging-Aux-Board/mpp-converter/src/: mpp-converter.cpp
Software/RK3568_MW-Charging-Aux-Board/rc522-controller/: CMakeLists.txt
Software/RK3568_MW-Charging-Aux-Board/rc522-controller/include/: rc522-controller.h
Software/RK3568_MW-Charging-Aux-Board/rc522-controller/src/: rc522-controller.cpp  test_demo.cpp
Software/RK3568_MW-Charging-Aux-Board/test_all/: CMakeLists.txt
Software/RK3568_MW-Charging-Aux-Board/test_all/src/: test_demo.cpp  test_demo1.cpp  test_demo2.cpp  test_demo3.cpp  test_demo4.cpp
Software/RK3568_MW-Charging-Aux-Board/usb-hikvisioner/: CMakeLists.txt  README.md  RawDataFormatConvert.cpp
Software/RK3568_MW-Charging-Aux-Board/usb-hikvisioner/include/: ThreadSafeQueue.h  usb-hikvisioner.h
Software/RK3568_MW-Charging-Aux-Board/usb-hikvisioner/src/: test_demo.cpp  usb-hikvisioner.cpp
qt_turntable/PowerOptimizer/: Makefile  PIDController.cpp  PIDController.h  PID_Controller.cpp  PowerOptimizer.pro  TrajectoryJsonDialog.cpp  command_struct.h  command_transmitter.cpp  command_transmitter.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  moc_command_transmitter.cpp  moc_mainwindow.cpp  moc_tab_stm32.cpp  moc_tab_turntablecontrol.cpp  qrc_qmake_qmake_qm_files.cpp  tab_device_connect.cpp  tab_device_connect.h  tab_deviceconnect.cpp  tab_deviceconnect.h  tab_file_read.cpp  tab_file_read.h  tab_stm32.cpp  tab_stm32.h  tab_turntable_control.cpp  tab_turntable_control.h  tab_turntablecontrol.cpp  tab_turntablecontrol.h  tabdeviceconnect.cpp  tabdeviceconnect.h  tempCodeRunnerFile.cpp  turntable_controller.cpp  turntable_controller.h  ui_mainwindow.h
qt_turntable_STM32/PowerOptimizer/: 20260112_2221_Mon_channel_info.csv  20260112_2221_Mon_optimal_result.csv  Makefile  PowerOptimizer.pro  command_transmitter.cpp  config.json  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  tab_deviceconnect.cpp  tab_deviceconnect.h  tab_stm32.cpp  tab_stm32.h  tab_turntablecontrol.cpp  tab_turntablecontrol.h  turntable_controller.h
qt_turntable_STM32/build-PowerOptimizer-Desktop_Qt_5_14_2_GCC_64bit-Debug/: Makefile
qt_turntable_final/: Makefile  qmake_qmake_qm_files.qrc
qt_turntable_final/PowerOptimizer/: Makefile  PID_Controller.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qmake_qmake_qm_files.qrc  qrc_qmake_qmake_qm_files.cpp  tab_device_connect.h  turntable_controller.h  ui_mainwindow.h
qt_turntable_point_closed_sontrol_pass/PowerOptimizer/: PowerOptimizer.pro  command_transmitter.cpp  mainwindow.ui  moc_logindialog.cpp  moc_tab_deviceconnect.cpp  moc_tab_file_read.cpp  moc_tab_turntablecontrol.cpp  qmake_qmake_qm_files.qrc  tab_turntablecontrol.cpp  ui_mainwindow.h
(+430 files in other folders)
